--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ RoxygenNote: 7.3.2
 Imports: 
     rvest
 Suggests: 
+    spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: http://christophertkenny.com/opengraph/
+Language: en-US
