--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,6 @@ Suggests:
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: http://christophertkenny.com/opengraph/
+URL: https://github.com/christopherkenny/opengraph,
+    https://christophertkenny.com/opengraph/
 Language: en-US
