--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,11 @@ Authors@R:
            role = c("aut", "cre"),
            email = "christopherkenny@fas.harvard.edu",
            comment = c(ORCID = "0000-0002-9386-6860"))
-Description: Social media sites often embed link cards when links are shared, based
-    on metadata in the Open Graph Protocol. This supports extracting that metadata
-    from a website. It further allows for the creation of tags to add to a website
-    to support the Open Graph Protocol and provides a list of the most common tags and
-    their required properties.
+Description: Social media sites often embed cards when links are shared, based on 
+    metadata in the Open Graph Protocol (<https://ogp.me/>). This supports extracting 
+    that metadata from a website. It further allows for the creation of tags to 
+    add to a website to support the Open Graph Protocol and provides a list of the 
+    standard tags and their required properties.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
